Fixing bugs relating to the background color not stretching the screen in horizontal mode on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    max-width: 100vw;
+    max-width: 100vw !important;
     min-width: 375px;
     height: 100%;
     background-image: linear-gradient(rgb(0, 0, 0), rgb(139, 139, 137));
